# ludwig-world-3d

./: Cargo.toml  LICENSE  README  README.md
src/: main.rs
src/game/player/: player.rs
src/game/state/: mainstate.rs  mod.rs
src/helper/: noise.rs
src/render/: camera.rs  mod.rs  vertexarray.rs
src/render/drawables/: chunk.rs  mod.rs  texture_vertex.rs
src/render/low/: buffer.rs  context.rs  drawable.rs  init.rs  master.rs  mod.rs  renderer.rs  textures.rs  uniforms.rs  vertex.rs
src/render/low/shaders/: chunk.vert  chunk.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  texture_vertex.frag  texture_vertex.vert  texture_vertex.vert.spv
src/render/meshing/: chunkmeshing.rs  meshing.rs  mod.rs
src/render/shapes/: mod.rs  shape.rs  shapes.rs
src/world/: constants.rs  map.rs  mod.rs  world.rs
src/world/block/: blocks.rs
src/world/chunk/: chunk.rs  chunkmanager.rs  mod.rs  pos.rs
