[package]
name = "ludwig-world-3d"
version = "0.1.0"
authors = ["Duco Lindhout"]
edition = "2018"

[dependencies]
image = "0.23.14"
winit = "0.22.2"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.7.0"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
rand = "0.8.3"

noise = "0.7.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
